tests/fixtures/invalid/list_div_int.py
# Cannot divide List[int] and Int
x: float = [1, 2, 3] / 1
